--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive: ^2.2.3
   hive_generator: ^2.0.0
   hive_flutter: ^1.1.0
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
